# n8n-web-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
chrome-extension/: manifest.json
config/: database.yaml  scheduler.yaml  scraper.json  settings.py
discord-bot/: .env.example  package.json
docs/: AUTOMATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  MODERNIZATION_README.md  PERFORMANCE_OPTIMIZATION.md  SYSTEM_GUIDE.md  TRAE_INTEGRATION_DEPLOYMENT.md  WEB_MODERNIZATION_PLAN.md  api_updates.txt  database_structure.md  deployment.md  development_testing.md  postgres-setup.md  postgresql_setup_guide.md  restruct.md  vector-database-integration.md
helm/n8n-scraper/: Chart.yaml  values.yaml
helm/n8n-scraper/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  rbac.yaml  service.yaml  storage.yaml
launchd/: com.n8n.automation.plist
migrations/: categorized_schema.sql  env.py  unified_schema.sql
migrations/versions/: 001_create_unified_tables.py
monitoring/prometheus/: prometheus.yml
scripts/: __init__.py  analyze_categories.py  benchmark_performance.py  check_current_db.py  check_db_status.py  comprehensive_workflow_manager.py  create_database.sql  create_docs_tables.sql  deploy.sh  dev-setup.sh  fix_foreign_keys.sql  migrate_backup_data.py  migrate_data.py  migrate_database_structure.py  migrate_to_unified_schema.py  modernize_setup.py  setup_automation.py  setup_postgres_docker.sh  test_postgres_connection.py  test_unified_integration.py
src/: __init__.py
src/automation/: automated_scraper.py  automation_service.py  monitoring_dashboard.py
src/n8n_scraper/: __init__.py  workflow_integration.py
src/n8n_scraper/agents/: __init__.py  knowledge_processor.py  n8n_agent.py
src/n8n_scraper/ai/: __init__.py  embeddings.py  intelligent_processor.py  predictive_analytics.py
src/n8n_scraper/api/: main.py
src/n8n_scraper/api/middleware/: __init__.py  auth.py  cors.py  rate_limit.py
src/n8n_scraper/api/models/: user.py
src/n8n_scraper/api/routes/: __init__.py  ai_routes.py  auth_routes.py  knowledge_routes.py  optimization_routes.py  system_routes.py  workflow_routes.py
src/n8n_scraper/auth/: jwt_auth.py
src/n8n_scraper/automation/: __init__.py  change_detector.py  knowledge_updater.py  knowledge_vector_integration.py  update_scheduler.py
src/n8n_scraper/cache/: redis_cache.py
src/n8n_scraper/cli/: __init__.py  __main__.py  commands.py  main.py  vector_commands.py
src/n8n_scraper/core/: __init__.py  config.py  exceptions.py  health.py  logging_config.py  metrics.py
src/n8n_scraper/database/: __init__.py  connection.py  data_importer.py  migrations.py  models.py  unified_models.py  unified_service.py  user_service.py  vector_db.py  vector_store.py  workflow_db.py
src/n8n_scraper/database/migrations/: 001_initial_setup.py  002_add_workflow_tables.py  migration_manager.py
src/n8n_scraper/database/schemas/: __init__.py  document.py  knowledge_base.py
src/n8n_scraper/optimization/: __init__.py  agent_manager.py  knowledge_cache.py
src/n8n_scraper/realtime/: collaboration_engine.py
src/n8n_scraper/scraper/: __init__.py  base_scraper.py  content_extractor.py  content_processor.py  n8n_scraper.py  quality_checker.py  rate_limiter.py  scraper_factory.py  session_manager.py  url_manager.py
src/n8n_scraper/utils/: __init__.py  text_processing.py
src/n8n_scraper/vector_store/: __init__.py
src/scrapers/: full-site-markdown-scraper.js  full-site-scraper.js  markdown-scraper.js
src/scripts/: __init__.py  import_docs_data.py  run_scraper.py  run_tests.py  start_system.py
src/tools/: __init__.py  restructure_project.py  system_check.py
systemd/: n8n-automation.service
terraform/: .terraform.lock.hcl  argocd.tf  eks.tf  elasticache.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  variables.tf
tests/: accurate_import_report.txt  conftest.py  run_import_tests.py  test_accurate_imports.py
tests/e2e/: test_user_workflows.py
tests/frontend/: login.test.tsx
tests/helm/: deployment.test.yaml
tests/integration/: test_api_endpoints.py  test_category_insert.py  test_integration.py  test_simple_insert.py
tests/performance/: test_load_performance.py
tests/terraform/: main.test.tf
tests/unit/: test_agents.py  test_api.py  test_config.py  test_database.py  test_imports.py  test_search_service.py
